--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    z-index: 100000;
+    z-index: 10000;
 }
 
 #custom-toolbar button {
@@ -41,4 +41,18 @@
 
 #drawingCanvas {
     cursor: url("pen.png") 16 16, crosshair;
+}
+
+#colorPicker {
+    border-style: 1px solid grey;
+    border-radius: 5px;
+    height: 35px;
+    width: 170px;
+    margin-left: 3px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    z-index: 20000;
+    font-size: 18px;
+    overflow: hidden;
 }
