--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,14 @@
 .highlight_div #highlighterSize {
     display: inline-block;
     font-size: 16px;
-    width: 45px;
-    height: 38px;
+    width: 40px;
+    height: 35px;
     outline: none;
+}
+
+#opacity,
+#brushSize {
+    width: 50px;
 }
 
 #rangeValue,
@@ -60,21 +65,6 @@
     background-color: black;
     border-radius: 50%;
     border: 1px solid rgb(0, 0, 0);
-}
-
-#colorPicker {
-    border-style: 1px solid grey;
-    border-radius: 5px;
-    height: 35px;
-    width: 50px;
-    margin-left: 3px;
-    text-align: center;
-    cursor: pointer;
-    outline: none;
-    z-index: 20000;
-    font-size: 18px;
-    overflow: hidden;
-    -webkit-text-size-adjust: none;
 }
 
 /* Color picker button styling */
